--- a/Overseas Box Office Collection/over_lifetime.html
+++ b/Overseas Box Office Collection/over_lifetime.html
@@ -99,8 +99,8 @@
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">Dangal</b></a><br>
 										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;23 Dec 2016<br>
-										<a href="over_lifetime.html"><b>Lifetime Gross $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
-										<a href="over_lifetime.html"><b>Lifetime Gross <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										<a href="over_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -116,9 +116,9 @@
 								<div class="col">
 									<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Secret Superstar</b></a><br>
 										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;19 Oct 2017<br>
-										<a href="over_lifetime.html"><b>Lifetime Gross $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_lifetime.html"><b>Lifetime
-												Gross<span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -135,9 +135,9 @@
 									<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">Bajrangi Bhaijaan</b></a><br>
 										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016<br>
-										<a href="over_lifetime.html"><b>Lifetime Gross $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_lifetime.html"><b>Lifetime
-												Gross<span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
@@ -154,9 +154,9 @@
 									<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 												class="sx">War</b></a><br>
 										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="over_lifetime.html"><b>Lifetime Gross $:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+										<a href="over_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 										<a href="over_lifetime.html"><b>Lifetime
-												Gross<span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+												Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 										Cr
 									</p>
 								</div>
