--- a/Overseas Box Office Collection/over_circuit.html
+++ b/Overseas Box Office Collection/over_circuit.html
@@ -40,7 +40,7 @@
 				<hr>
 				<h3 class="gyb">Highest Circuit-Wise Gross Collection:</h3>
 				<hr class="gyb">
-				<h3>Highest USA/Canada Gross Collection:</h3>
+				<h3>Highest USA-Canada Gross Collections:</h3>
 				<div class="row">
 					<div class="col ss2">
 						<select class="choose">
@@ -118,7 +118,7 @@
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">Dangal</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016 <br>
-								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime Gross <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41 Mn</p>
 					</div>
 					<hr>
@@ -132,7 +132,7 @@
 						<div class="col">
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Padmaavat</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;25 Jan 2018 <br>
-								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
 							</p>
@@ -150,7 +150,7 @@
 							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">PK</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;29 Dec 2014 <br>
-								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
 							</p>
@@ -168,7 +168,7 @@
 							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">War</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021 <br>
-								<a href="over_circuit.html"><b>USA/Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
 							</p>
