--- a/World-Wide Box Office Collection/world_weekend.html
+++ b/World-Wide Box Office Collection/world_weekend.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="shortcut icon" href="/assets/favicon.ico">
 	</head>
 	<body>
 
@@ -33,97 +34,135 @@
 				<section class="wrapper style2">
 					<div class="inner">
                         <a href="../worldwide.html"><h2>World-Wide Box Office Collection:</h2></a><hr>
-						<h3>Highest Opening Weekend Gross Collection:</h3>
+						<h3>Highest Opening Weekend Gross Collections:</h3>
                         <div class="row">							
-							<div class="col select">
-								<select name="year" class="addselect" id="year">
-										<option value="2k21" class="l1"> Year</option>
-										<option value="2k21" class="l1"> 2021</option>
-										<option value="2k20" class="l1"> 2020</option>
-										<option value="2k19" class="l1"> 2019</option>
-										<option value="2k18" class="l1"> 2018</option>
-										<option value="2k17" class="l1"> 2017</option>
-										<option value="2k16" class="l1"> 2016</option>
-										<option value="2k15" class="l1"> 2015</option>
-										<option value="2k14" class="l1"> 2014</option>
-										<option value="2k13" class="l1"> 2013</option>
-										<option value="2k12" class="l1"> 2012</option>
-										<option value="2k11" class="l1"> 2011</option>
-										<option value="2k10" class="l1"> 2010</option>
+							<div class="col ss2">
+								<select class="choose">
+										<option disabled selected > Year </option>  
+										<option value="2k21" > 2021</option>
+										<option value="2k20" > 2020</option>
+										<option value="2k19" > 2019</option>
+										<option value="2k18" > 2018</option>
+										<option value="2k17" > 2017</option>
+										<option value="2k16" > 2016</option>
+										<option value="2k15" > 2015</option>
+										<option value="2k14" > 2014</option>
+										<option value="2k13" > 2013</option>
+										<option value="2k12" > 2012</option>
+										<option value="2k11" > 2011</option>
+										<option value="2k10" > 2010</option>
 								</select><br>
                     		</div>
 						</div>
-						<table>
+						<table class="tab12">
 							<tr>
-								<th width="5%" align="center" valign="middle" class="ww">Rank</th>
-                                <th width="15%" align="center" valign="middle" class="ww">Poster</th>
-								<th width="25%" align="center" valign="middle" class="ww">Movie Name</th>
-								<th width="15%" align="center" valign="middle" class="ww">Release Date</th>
-								<th width="15%" align="center" valign="middle" class="ww">Opening Weekend </th>
-								<th width="20%" align="center" valign="middle" class="ww">Lifetime Gross</th>
+								<th valign="middle" class="ww"><a >Rank</a></th>
+								<th valign="middle" class="ww "><a >Poster</a></th>
+								<th valign="middle" class="ww"><a>Movie Name</a></th>
+								<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
+								<th valign="middle" class="ww"><a href="world_weekend.html">Opening Weekend</a></th>
+								<th valign="middle" class="ww"><a href="world_lifetime.html">Lifetime Gross</a></th>
 							</tr>
                             <tr>
 								<td>1.</td>
 								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/sultan.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/sultan.jpg" data-src="../images/sultan.jpg" width="50" height="70"></a></td>
 								<td><a href="../detail.html">Sultan</a></td>
-								<td>6th July , 16</td>
-								<td><span>&#8377;</span>210.12 Cr.</td>
-								<td><span>&#8377;</span>615.70 Cr.</td>
+								<td>6 July 2016</td>
+								<td><span>&#8377;</span> 210.12 Cr</td>
+								<td><span>&#8377;</span> 615.70 Cr</td>
                             </tr>
                             <tr>
 								<td>2.</td>
 								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/bahubali2.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg" width="50" height="70"></a></td>
 								<td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
-								<td>28th  April, 17</td>
-								<td><span>&#8377;</span>209.68 Cr.</td>
-								<td><span>&#8377;</span>810.60 Cr.</td>
+								<td>28 Apr 2017</td>
+								<td><span>&#8377;</span> 209.68 Cr</td>
+								<td><span>&#8377;</span> 810.60 Cr</td>
                             </tr>
                             <tr>
 								<td>3.</td>
 								<td><a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="../images/sanju.jpeg" width='50' height='70' /></noscript><img class=" lazyloaded" src="../images/sanju.jpeg" data-src="../images/sanju.jpeg" width="50" height="70"></a></td>
 								<td><a href="../detail.html">Sanju</a></td>
-								<td>29th June , 18</td>
-								<td><span>&#8377;</span>203.57 Cr.</td>
-								<td><span>&#8377;</span>578.44 Cr.</td>
+								<td>29 June 2018</td>
+								<td><span>&#8377;</span> 203.57 Cr</td>
+								<td><span>&#8377;</span> 578.44 Cr</td>
                             </tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
 						</table>
+						<div class="wrp">
+							<div class="row">
+								<div class="col">
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/sultan.jpg" data-src="images/ramp.jpg"
+											width="70" height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">Sultan</b></a><br>
+										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;6 July 2016<br>
+										<a href="world_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr<br>
+										<a href="world_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Cr
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]
+												</b></a><br>
+										<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;28 Apr 2017<br>
+										<a href="world_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr<br>
+										<a href="world_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Cr
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/sanju.jpeg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">Sanju</b></a><br>
+										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;29 June 2018<br>
+										<a href="world_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr<br>
+										<a href="world_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Cr
+									</p>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col">
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+												class="sx">War</b></a><br>
+										<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="world_weekend.html"><b>Opening Weekend:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr<br>
+										<a href="world_lifetime.html"><b>Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
+										Cr
+									</p>
+								</div>
+							</div>
+							<hr>
+						</div>
 					</div>
-
                 </section>
         
         <!-- Footer -->
@@ -158,12 +197,15 @@
 				</div>
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+						<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
+									class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
+									class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
+									class="label">Instagram</span></a></li>
 					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
+					&copy; Design By: <a href="#">Tech_Marketz</a>
 				</div>
 			</footer>
 
