--- a/Domestic Box Office Collection/dom_circuit.html
+++ b/Domestic Box Office Collection/dom_circuit.html
@@ -59,6 +59,9 @@
 							<option value="2k10" > 2010</option>
 					</select><br>
 					</div>
+					<div class="col">
+						<button class="btttn"></button>
+					</div>
 				</div>
 				<table class="tab12">
 					<tr>
@@ -161,8 +164,7 @@
 						</div>
 						<div class="col">
 							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Bahubali 2 [Hindi]</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br>
-								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;2 Oct 2019<br>								<a href="dom_circuit.html"><b>Mumbai-Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
