--- a/Domestic Box Office Collection/dom_lifetime_gross.html
+++ b/Domestic Box Office Collection/dom_lifetime_gross.html
@@ -52,6 +52,9 @@
 									<option value="2k10" > 2010</option>
 							</select><br>
                     		</div>
+							<div class="col">
+								<button class="btttn"></button>
+							</div>
 						</div>
 						<table class="tab12">
 							<tr>
@@ -60,7 +63,7 @@
 								<th valign="middle" class="ww"><a >Movie Name</a></th>
 								<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
 								<th valign="middle" class="ww"><a href="dom_lifetime_gross.html">Lifetime Gross</a></th>
-								<th valign="middle" class="ww"><a href="../verdict.html">Verdict</a></th>
+								<th valign="middle" class="ww"><a href="../verdict.html">Domestic Verdict</a></th>
 							</tr>
 							<tr>
 								<td>1.</td>
