--- a/Overseas Box Office Collection/over_circuit.html
+++ b/Overseas Box Office Collection/over_circuit.html
@@ -38,7 +38,7 @@
 					<h2>Overseas Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3 class="gyb">Highest Circuit-Wise Gross Collection:</h3>
+				<h3 class="gyb">Highest Circuit-Wise Gross Collections:</h3>
 				<hr class="gyb">
 				<h3>Highest USA-Canada Gross Collections:</h3>
 				<div class="row">
@@ -59,6 +59,9 @@
 							<option value="2k10"> 2010</option>
 						</select><br>
 					</div>
+					<div class="col">
+						<button class="btttn"></button>
+					</div>
 				</div>
 				<table class="tab12">
 					<tr>
@@ -66,7 +69,7 @@
 						<th valign="middle" class="ww "><a>Poster</a></th>
 						<th valign="middle" class="ww"><a>Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="over_circuit.html">USA/Canada</a></th>
+						<th valign="middle" class="ww"><a href="over_circuit.html">USA-Canada</a></th>
 						<th valign="middle" class="ww"><a href="over_lifetime.html">Lifetime Gross</a></th>
 					</tr>
 					<tr>
@@ -109,39 +112,46 @@
 				<div class="wrp">
 					<div class="row">
 						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg"
-									width="70" height="90"></a>
+									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
 						</div>
 						<div class="col">
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
 										class="sx">Dangal</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;23 Dec 2016 <br>
 								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
-								<a href="over_lifetime.html"><b>Lifetime Gross <span>&#8377;</span>:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41 Mn</p>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/padmavat.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Padmaavat</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;25 Jan 2018 <br>
-								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
-								<a href="over_lifetime.html"><b>Lifetime
-										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+								<a href="over_lifetime.html"><b>Lifetime Gross
+										:</b></a>&nbsp;&nbsp;$&nbsp;41 Mn
 							</p>
 						</div>
 					</div>
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/padmavat.jpg" data-src="images/ramp.jpg"
+									width="70" height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b
+										class="sx">Padmaavat</b></a><br>
+								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;25 Jan 2018 <br>
+								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
+								<a href="over_lifetime.html"><b>Lifetime
+										Gross:</b></a>&nbsp;&nbsp;$ 41.62 Mn
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/pk.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -152,14 +162,15 @@
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;29 Dec 2014 <br>
 								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime
-										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+										Gross:</b></a>&nbsp;&nbsp;$&nbsp;41.62 Mn
 							</p>
 						</div>
 					</div>
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/war.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -170,7 +181,7 @@
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021 <br>
 								<a href="over_circuit.html"><b>USA-Canada:</b></a>&nbsp;&nbsp;$ 10.59 Mn<br>
 								<a href="over_lifetime.html"><b>Lifetime
-										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Mn
+										Gross:</b></a>&nbsp;&nbsp;$&nbsp;41.62 Mn
 							</p>
 						</div>
 					</div>
@@ -211,12 +222,15 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
+								class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
+								class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
+								class="label">Instagram</span></a></li>
 				</ul>
-				&copy; Design By: <a href="#">Tech_Marketz</a>   
+				&copy; Design By: <a href="#">Tech_Marketz</a>
 			</div>
 		</footer>
 
