--- a/Overseas Box Office Collection/over_week.html
+++ b/Overseas Box Office Collection/over_week.html
@@ -52,6 +52,9 @@
 									<option value="2k10" > 2010</option>
 							</select><br>
                     		</div>
+							<div class="col">
+								<button class="btttn"></button>
+							</div>
 						</div>
 						<table class="tab12">
 							<tr>
@@ -59,9 +62,9 @@
 								<th valign="middle" class="ww "><a >Poster</a></th>
 								<th valign="middle" class="ww"><a >Movie Name</a></th>
 								<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-								<th valign="middle" class="ww"><a href="over_week.html">Opening Week $</a></th>
+								<th valign="middle" class="ww"><a href="over_week.html">Opening Week</a></th>
 								<th valign="middle" class="ww"><a href="over_week.html">Opening Week
-										<span>&#8377;</span></a></th>
+										</a></th>
 							</tr>
                             <tr>
 								<td>1.</td>
