--- a/Overseas Box Office Collection/over_weekend.html
+++ b/Overseas Box Office Collection/over_weekend.html
@@ -57,6 +57,9 @@
 							<option value="2k10" > 2010</option>
 					</select><br>
 					</div>
+					<div class="col">
+						<button class="btttn"></button>
+					</div>
 				</div>
 				<table class="tab12">
 					<tr>
@@ -64,9 +67,9 @@
 						<th valign="middle" class="ww "><a >Poster</a></th>
 						<th valign="middle" class="ww"><a>Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="over_weekend.html">Opening Weekend $</a></th>
+						<th valign="middle" class="ww"><a href="over_weekend.html">Opening Weekend</a></th>
 						<th valign="middle" class="ww"><a href="over_weekend.html">Opening Weekend
-								<span>&#8377;</span></a></th>
+								</a></th>
 					</tr>
 					<tr>
 						<td>1.</td>
@@ -89,7 +92,7 @@
 									width="50" height="70"></a></td>
 						<td><a href="../detail.html">Dhoom 3</a></td>
 						<td>20 Dec 2013</td>
-						<td>$10.32 Mn</td>
+						<td>$ 10.32 Mn</td>
 						<td><span>&#8377;</span> 63.98 Cr</td>
 					</tr>
 					<tr>
