--- a/World-Wide Box Office Collection/world_lifetime.html
+++ b/World-Wide Box Office Collection/world_lifetime.html
@@ -57,6 +57,9 @@
 							<option value="2k10"> 2010</option>
 						</select><br>
 					</div>
+					<div class="col">
+						<button class="btttn"></button>
+					</div>
 				</div>
 				<table class="tab12">
 					<tr>
@@ -128,9 +131,9 @@
 								<a href="../Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59
 								Cr<br><a href="../Overseas Box Office Collection/over_lifetime.html"><b>Overseas
-										Lifetime Gross</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
-								<a href="world_lifetime.html"><br><b>World Lifetime
-										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;21.18
+										Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
+								<a href="world_lifetime.html"><br><b>Worldwide Lifetime
+										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;21233.18
 								Cr
 							</p>
 						</div>
@@ -152,9 +155,9 @@
 								<a href="../Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59
 								Cr<br><a href="../Overseas Box Office Collection/over_lifetime.html"><b>Overseas
-										Lifetime Gross</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
-								<a href="world_lifetime.html"><br><b>World Lifetime
-										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;21.18
+										Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
+								<a href="world_lifetime.html"><br><b>Worldwide Lifetime
+										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;21343.18
 								Cr
 							</p>
 						</div>
@@ -175,8 +178,8 @@
 								<a href="../Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59
 								Cr<br><a href="../Overseas Box Office Collection/over_lifetime.html"><b>Overseas
-										Lifetime Gross</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
-								<a href="world_lifetime.html"><br><b>World Lifetime
+										Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
+								<a href="world_lifetime.html"><br><b>Worldwide Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;21.18
 								Cr
 							</p>
@@ -198,8 +201,8 @@
 								<a href="../Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59
 								Cr<br><a href="../Overseas Box Office Collection/over_lifetime.html"><b>Overseas
-										Lifetime Gross</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
-								<a href="world_lifetime.html"><br><b>World Lifetime
+										Lifetime Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span> 10.59 Cr
+								<a href="world_lifetime.html"><br><b>Worldwide Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62
 								Cr
 							</p>
